fix: moving spacing to the outer most container

--- a/packages/components/bolt-stack/src/stack.scss
+++ b/packages/components/bolt-stack/src/stack.scss
@@ -5,21 +5,21 @@
 \* ------------------------------------ */
 
 // Register Custom Block Element
-@include bolt-custom-element('bolt-stack', block);
+@include bolt-custom-element('bolt-stack', block, medium);
 
 .c-bolt-stack {
   display: block;
-
-  @at-root bolt-stack:last-child & {
-    @include bolt-margin-bottom(0);
-  }
 }
 
 // Spcaing options
 @each $spacing-value in $bolt-spacing-values {
   $spacing-value-name: nth($spacing-value, 1);
 
-  .c-bolt-stack--#{$spacing-value-name} {
+  bolt-stack:not(:last-child)[spacing='#{$spacing-value-name}'] {
     @include bolt-margin-bottom(#{$spacing-value-name});
   }
+}
+
+bolt-stack[spacing='none'] {
+  @include bolt-margin-bottom(0);
 }
